@@ -19,36 +19,18 @@
 
 package org.elasticsearch.index.mapper;
 
-import org.elasticsearch.index.analysis.NamedAnalyzer;
-
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
+
+import static java.util.stream.Collectors.toList;
 
 public class MappingLookupUtils {
     public static MappingLookup fromTypes(MappedFieldType... types) {
-        return fromTypes(Arrays.asList(types));
+        return fromTypes(Arrays.asList(types), List.of());
     }
 
-    public static MappingLookup fromTypes(List<MappedFieldType> fields) {
-        List<FieldMapper> mappers = new ArrayList<>();
-        List<RuntimeFieldType> runtimeFields = new ArrayList<>();
-        for (MappedFieldType type : fields) {
-            if (type instanceof RuntimeFieldType) {
-                runtimeFields.add((RuntimeFieldType) type);
-            } else {
-                mappers.add(mockFieldMapper(type));
-            }
-        }
+    public static MappingLookup fromTypes(List<MappedFieldType> concreteFields, List<RuntimeFieldType> runtimeFields) {
+        List<FieldMapper> mappers = concreteFields.stream().map(MockFieldMapper::new).collect(toList());
         return new MappingLookup("_doc", mappers, List.of(), List.of(), runtimeFields, 0, souceToParse -> null, true);
-    }
-
-    public static FieldMapper mockFieldMapper(MappedFieldType type) {
-        Map<String, NamedAnalyzer> indexAnalyzers = Map.of();
-        if (type.getTextSearchInfo() != TextSearchInfo.NONE) {
-            indexAnalyzers = Map.of(type.name(), type.getTextSearchInfo().getSearchAnalyzer());
-        }
-        return new MockFieldMapper(type, indexAnalyzers);
     }
 }
